appId: com.hamleys_webapp
---
- launchApp:
    clearState: false
- waitForAnimationToEnd
- tapOn: Search
- inputText: "toys"
- pressKey: Enter
- tapOn: "Add "
- tapOn: "view bag"
- swipe:
    direction: DOWN

