appId: com.hamleys_webapp
---
- launchApp:
    clearState: true
- tapOn:
    id: "com.android.permissioncontroller:id/permission_allow_button"
- tapOn: "Profile"
- tapOn:
    id: ":r0:"
- inputText: "8888888888"
- tapOn:
    point: 7%,56%
- tapOn: "GET OTP"
- inputText: "5401"
- tapOn: "CONTINUE"